# Deep-PTA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
aprendizaje/: 01_separacion_presion_derivada.md  02_regimenes_flujo_pendiente_loglog.md  03_normalizacion_y_destruccion_de_senal.md
data/real/: README.md  example_synthetic_case.csv  example_synthetic_case.json
docs/: bitacora.html  guia_estilos.html  index.html
docs/assets/: deep_pta.mplstyle  site.js  style.css
documentation/: 03_plan_implementacion.md  04_referencias.md  05_teoria_pta.md  06_reporte_no_unicidad_confusiones.md  07_reporte_mejora_accuracy.md  08_reporte_sim_to_real.md  10_reporte_banco_arquitecturas.md  README.md  deep-pta-interpretacion-pruebas-presion.md  deep-pta.md  plan-implementacion.md  posts-linkedin.md  reporte-mejora-accuracy.md  reporte-sim-to-real.md  teoria-pta.md
src/deep_pta/: __init__.py
src/deep_pta/app/: __init__.py  app.py  inference.py  narrator.py
src/deep_pta/data/: __init__.py  bourdet.py  generator.py  real_cases.py  realism.py  representation.py  sampling.py
src/deep_pta/engine/: __init__.py  boundaries.py  fractures.py  gpu_engine.py  laplace_base.py  reservoir_models.py  (+2 more)
tests/: test_bourdet.py  test_engine_typecurves.py  test_engine_vs_anaflow.py  test_generator.py  test_gpu_engine.py  test_inference_smoke.py  test_models_bench.py  test_representation_channels.py  test_sampling.py  test_stehfest.py  test_train_pipeline.py  test_train_smoke.py
todo/: PLAN.md  bitacora-2026-06-05.md  bitacora-2026-06-07.md  bitacora-2026-06-08.md  bitacora-2026-06-09.md
(+16 files in other folders)
